--- a/book.html
+++ b/book.html
@@ -247,7 +247,7 @@
             </div>
             </div>
             <div class="sub-btn text-center mt-5">
-<input type="submit" class="btn btn-primary text-center" name="submit" value="Submit Order">
+<input type="submit" class="btn w-25 px-5 py-3 btn-primary text-center" name="submit" value="Submit Order">
 </div>
     </form>
 </div>
