--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Restoran - Bootstrap Restaurant Template</title>
+    <title>PKM Catering</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -76,12 +76,15 @@
             <div class="container-xxl py-5 bg-dark hero-header mb-5">
                 <div class="container my-5 py-5">
                     <div class=" align-items-center g-5">
-                        <div class=" text-center align-items-center text-lg-start">
-                            <h1 class="display-3 text-warning animated text-center slideInLeft m-4">Enjoy Our Delicious Meal</h1>
+                        <div class=" text-center align-items-center text-lg-start ">
+                            <div class="container gpic">
+                                <img src="img/perumalpic.png" alt="" class="img-fluid " width="300">
+                            </div>
+                            <h1 class="display-3 text-warning animated text-center slideInLeft m-4">P.K.Mayakootha Iyengar Catering</h1>
                             <p class="text-white animated slideInLeft mb-4 pb-2 text-center" >Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem </p>
                             
                             <div class="center-a text-center m-2 p-4">
-                                <a href="" class="btn btn-primary py-sm-3 px-sm-5 me-3  animated slideInLeft">Book A Table</a>
+                                <a href="" class="btn btn-primary py-sm-3 px-sm-5 me-3  animated slideInLeft">VIEW MENU</a>
                             </div>
                         </div>
                         <!-- <div class="col-lg-6 text-center text-lg-end overflow-hidden">
@@ -212,8 +215,8 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h5 class="section-title ff-secondary text-center text-primary fw-normal">Food Menu</h5>
-                    <h1 class="mb-5">Most Popular Items</h1>
+                    <!-- <h5 class="section-title ff-secondary text-center text-primary fw-normal">Food Menu</h5> -->
+                    <h1 class="mb-5 section-title">Our Menu</h1>
                 </div>
                 <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.1s">
                     <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
