--- a/index.html
+++ b/index.html
@@ -160,15 +160,16 @@
 
         <!-- About Start -->
         <div class="container-xxl py-5">
-            <div class="container">
+            <div class="container text-center">
+                <h1 class="mb-5  section-title">About Us</h1>
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
                         <div class="row g-3">
                             <div class="col-6 text-start">
-                                <img class="img-fluid rounded h-100 wow zoomIn" data-wow-delay="0.1s" src="img/about-1.jpg">
+                                <img class="img-fluid rounded  wow zoomIn" data-wow-delay="0.1s" src="img/godpic.jpg">
                             </div>
                             <div class="col-6 text-start">
-                                <img class="img-fluid rounded h-100 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.jpg" style="margin-top: 25%;">
+                                <img class="img-fluid rounded  wow zoomIn" data-wow-delay="0.3s" src="img/about.jpg" style="margin-top: 25%;">
                             </div>
                             <!-- <div class="col-6 text-end">
                                 <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.5s" src="img/about-3.jpg">
@@ -179,17 +180,17 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <h4 class=" text-start  text-primary fw-normal">About Us</h4>
+                        <!-- <h4 class=" text-start  text-primary fw-normal">About Us</h4> -->
                         <h1 class="mb-4">Welcome to <span class="text-primary">P.K.M Catering</span></h1>
                         <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos erat ipsum et lorem et sit, sed stet lorem sit.</p>
                         <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
                         <div class="row g-4 mb-4">
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center border-start border-5 border-primary px-3">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">15</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">24</h1>
                                     <div class="ps-4">
-                                        <p class="mb-0">Years of</p>
-                                        <h6 class="text-uppercase mb-0">Experience</h6>
+                                        <p class="mb-0">Years In</p>
+                                        <h6 class="text-uppercase mb-0">Business</h6>
                                     </div>
                                 </div>
                             </div>
@@ -203,7 +204,6 @@
                                 </div>
                             </div>
                         </div>
-                        <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
                     </div>
                 </div>
             </div>
@@ -212,7 +212,7 @@
 
 
         <!-- Menu Start -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl py-5 mt-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <!-- <h5 class="section-title ff-secondary text-center text-primary fw-normal">Food Menu</h5> -->
