--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-<<<<<<< HEAD
     <title>P.K.M Catering</title>
-=======
-    <title>PKM Catering</title>
->>>>>>> ce9f1d68cc5e1899acae7e234f1642c85d08dc5e
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -19,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&family=Pacifico&display=swap" rel="stylesheet">
+
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -74,20 +71,20 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
                 </button>
-                <div class="collapse navbar-collapse " id="navbarCollapse">
+                <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="menu.html" class="nav-item nav-link">Menu</a>
-                        <!-- <div class="nav-item dropdown">
+                        <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
                                 <a href="booking.html" class="dropdown-item">Booking</a>
                                 <a href="team.html" class="dropdown-item">Our Team</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                             </div>
-                        </div> -->
+                        </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="book.html" class="btn btn-warning py-2 px-4">Order Now</a>
@@ -97,24 +94,12 @@
             <div class="container-fluid py-5 bg-dark hero-header mb-5">
                 <div class="container my-5 py-5">
                     <div class=" align-items-center g-5">
-<<<<<<< HEAD
                         <div class=" text-center align-items-center text-lg-start">
                             <h1 class="display-3 text-warning animated fw-bold text-center slideInLeft m-4">Enjoy Our Delicious Meal</h1>
                             <p class="text-white animated slideInLeft mb-4 pb-2 text-center" >Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem </p>
                             
                             <div class="center-a text-center m-2 p-4">
                                 <a href="" class="btn btn-warning py-sm-3 px-sm-5 me-3  animated slideInLeft">Book A Table</a>
-=======
-                        <div class=" text-center align-items-center text-lg-start ">
-                            <div class="container gpic">
-                                <img src="img/perumalpic.png" alt="" class="img-fluid " width="300">
-                            </div>
-                            <h1 class="display-3 text-warning animated text-center slideInLeft m-4">P.K.Mayakootha Iyengar Catering</h1>
-                            <p class="text-white animated slideInLeft mb-4 pb-2 text-center" >Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem </p>
-                            
-                            <div class="center-a text-center m-2 p-4">
-                                <a href="" class="btn btn-primary py-sm-3 px-sm-5 me-3  animated slideInLeft">VIEW MENU</a>
->>>>>>> ce9f1d68cc5e1899acae7e234f1642c85d08dc5e
                             </div>
                         </div>
                         <!-- <div class="col-lg-6 text-center text-lg-end overflow-hidden">
@@ -190,47 +175,36 @@
 
         <!-- About Start -->
         <div class="container-xxl py-5">
-            <div class="container text-center">
-                <h1 class="mb-5  section-title">About Us</h1>
+            <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
                         <div class="row g-3">
                             <div class="col-6 text-start">
-                                <img class="img-fluid rounded  wow zoomIn" data-wow-delay="0.1s" src="img/godpic.jpg">
+                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="img/about-1.jpg">
                             </div>
                             <div class="col-6 text-start">
-                                <img class="img-fluid rounded  wow zoomIn" data-wow-delay="0.3s" src="img/about.jpg" style="margin-top: 25%;">
+                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.jpg" style="margin-top: 25%;">
                             </div>
-                            <!-- <div class="col-6 text-end">
+                            <div class="col-6 text-end">
                                 <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.5s" src="img/about-3.jpg">
                             </div>
                             <div class="col-6 text-end">
                                 <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.7s" src="img/about-4.jpg">
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
-<<<<<<< HEAD
                         <h5 class="section-title ff-secondary text-start text-warning fw-normal">About Us</h5>
                         <h1 class="mb-4">Welcome to <i class="fa fa-utensils text-warning me-2"></i>Restoran</h1>
-=======
-                        <!-- <h4 class=" text-start  text-primary fw-normal">About Us</h4> -->
-                        <h1 class="mb-4">Welcome to <span class="text-primary">P.K.M Catering</span></h1>
->>>>>>> ce9f1d68cc5e1899acae7e234f1642c85d08dc5e
                         <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos erat ipsum et lorem et sit, sed stet lorem sit.</p>
                         <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
                         <div class="row g-4 mb-4">
                             <div class="col-sm-6">
-<<<<<<< HEAD
                                 <div class="d-flex align-items-center border-start border-5 border-wtext-warning px-3">
                                     <h1 class="flex-shrink-0 display-5 text-warning mb-0" data-toggle="counter-up">15</h1>
-=======
-                                <div class="d-flex align-items-center border-start border-5 border-primary px-3">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">24</h1>
->>>>>>> ce9f1d68cc5e1899acae7e234f1642c85d08dc5e
                                     <div class="ps-4">
-                                        <p class="mb-0">Years In</p>
-                                        <h6 class="text-uppercase mb-0">Business</h6>
+                                        <p class="mb-0">Years of</p>
+                                        <h6 class="text-uppercase mb-0">Experience</h6>
                                     </div>
                                 </div>
                             </div>
@@ -244,10 +218,7 @@
                                 </div>
                             </div>
                         </div>
-<<<<<<< HEAD
                         <a class="btn btn-wtext-warning py-3 px-5 mt-2" href="">Read More</a>
-=======
->>>>>>> ce9f1d68cc5e1899acae7e234f1642c85d08dc5e
                     </div>
                 </div>
             </div>
@@ -256,18 +227,10 @@
 
 
         <!-- Menu Start -->
-<<<<<<< HEAD
     <div class="container-fluid py-5">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h5 class="section-title ff-secondary text-center text-warning fw-normal">Food Menu</h5>
                     <h1 class="mb-5">Most Popular Packages</h1>
-=======
-        <div class="container-xxl py-5 mt-5">
-            <div class="container">
-                <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <!-- <h5 class="section-title ff-secondary text-center text-primary fw-normal">Food Menu</h5> -->
-                    <h1 class="mb-5 section-title">Our Menu</h1>
->>>>>>> ce9f1d68cc5e1899acae7e234f1642c85d08dc5e
                 </div>
                         <!-- Pricing Start -->
         <div class="container-fluid pricing py-5">
@@ -354,39 +317,27 @@
                     <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
                         <li class="nav-item">
                             <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3 active" data-bs-toggle="pill" href="#tab-1">
-<<<<<<< HEAD
                                 <i class="fa fa-coffee fa-2x text-warning"></i>
-=======
-                                <!-- <i class="fa fa-coffee fa-2x text-primary"></i> -->
->>>>>>> ce9f1d68cc5e1899acae7e234f1642c85d08dc5e
                                 <div class="ps-3">
-                                    <!-- <small class="text-body">Popular</small> -->
+                                    <small class="text-body">Popular</small>
                                     <h6 class="mt-n1 mb-0">Breakfast</h6>
                                 </div>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#tab-2">
-<<<<<<< HEAD
                                 <i class="fa fa-hamburger fa-2x text-warning"></i>
-=======
-                                <!-- <i class="fa fa-hamburger fa-2x text-primary"></i> -->
->>>>>>> ce9f1d68cc5e1899acae7e234f1642c85d08dc5e
                                 <div class="ps-3">
-                                    <!-- <small class="text-body">Special</small> -->
+                                    <small class="text-body">Special</small>
                                     <h6 class="mt-n1 mb-0">Launch</h6>
                                 </div>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex align-items-center text-start mx-3 me-0 pb-3" data-bs-toggle="pill" href="#tab-3">
-<<<<<<< HEAD
                                 <i class="fa fa-utensils fa-2x text-warning"></i>
-=======
-                                <!-- <i class="fa fa-utensils fa-2x text-primary"></i> -->
->>>>>>> ce9f1d68cc5e1899acae7e234f1642c85d08dc5e
                                 <div class="ps-3">
-                                    <!-- <small class="text-body">Lovely</small> -->
+                                    <small class="text-body">Lovely</small>
                                     <h6 class="mt-n1 mb-0">Dinner</h6>
                                 </div>
                             </a>
@@ -701,7 +652,7 @@
 
 
         <!-- Reservation Start -->
-        <!-- <div class="container-xxl py-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container-xxl py-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
             <div class="row g-0">
                 <div class="col-md-6">
                     <div class="video">
@@ -758,30 +709,30 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
-        <!-- <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content rounded-0">
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">Youtube Video</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body"> -->
+                    <div class="modal-body">
                         <!-- 16:9 aspect ratio -->
-                        <!-- <div class="ratio ratio-16x9">
+                        <div class="ratio ratio-16x9">
                             <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
                                 allow="autoplay"></iframe>
                         </div>
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- Reservation Start -->
 
 
         <!-- Team Start -->
-        <!-- <div class="container-xxl pt-5 pb-3">
+        <div class="container-xxl pt-5 pb-3">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h5 class="section-title ff-secondary text-center text-warning fw-normal">Team Members</h5>
@@ -846,7 +797,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- Team End -->
 
 
@@ -910,7 +861,6 @@
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
-<<<<<<< HEAD
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
@@ -923,20 +873,6 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-warning fw-normal mb-4">Contact</h4>
-=======
-            <div class="container py-5 ">
-                <div class="row g-5 ">
-                    <div class="col-lg-4 col-md-6  ">
-                        <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Company</h4>
-                        <a class="btn btn-link" href="">About Us</a>
-                        <a class="btn btn-link" href="">Contact Us</a>
-                        <a class="btn btn-link" href="">Reservation</a>
-                        <a class="btn btn-link" href="">Privacy Policy</a>
-                        <a class="btn btn-link" href="">Terms & Condition</a>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h4>
->>>>>>> ce9f1d68cc5e1899acae7e234f1642c85d08dc5e
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
@@ -947,31 +883,21 @@
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-<<<<<<< HEAD
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-warning fw-normal mb-4">Opening</h4>
-=======
-                    <div class="col-lg-4 col-md-6">
-                        <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h4>
->>>>>>> ce9f1d68cc5e1899acae7e234f1642c85d08dc5e
                         <h5 class="text-light fw-normal">Monday - Saturday</h5>
                         <p>09AM - 09PM</p>
                         <h5 class="text-light fw-normal">Sunday</h5>
                         <p>10AM - 08PM</p>
                     </div>
-<<<<<<< HEAD
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-warning fw-normal mb-4">Newsletter</h4>
-=======
-                    <!-- <div class="col-lg-3 col-md-6">
-                        <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Newsletter</h4>
->>>>>>> ce9f1d68cc5e1899acae7e234f1642c85d08dc5e
                         <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
                             <input class="form-control border-wtext-warning w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                             <button type="button" class="btn btn-wtext-warning py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
             <div class="container">
@@ -1000,11 +926,7 @@
 
 
         <!-- Back to Top -->
-<<<<<<< HEAD
         <a href="#" class="btn btn-lg btn-wtext-warning btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-=======
-        <a href="#" class="btn btn-lg btn-primary btn-lg-circle2 back-to-top"><i class="bi bi-arrow-up"></i></a>
->>>>>>> ce9f1d68cc5e1899acae7e234f1642c85d08dc5e
     </div>
 
     <!-- JavaScript Libraries -->
