--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
    <link rel="stylesheet" href="css/style2.css">
+  
 </head>
 
 <body>
@@ -73,11 +74,11 @@
                 </div>
             </nav>
 
-            <div class="container-xxl py-5 bg-dark hero-header mb-5">
+            <div class="container-xxl py-5 bg-dark hero-head mb-5">
                 <div class="container my-5 py-5">
                     <div class=" align-items-center g-5">
                         <div class=" text-center align-items-center text-lg-start ">
-                            <div class="container gpic">
+                            <div class="container gpic  text-center">
                                 <img src="img/perumalpic.png" alt="" class="img-fluid " width="300">
                             </div>
                             <h1 class="display-3 text-warning animated text-center slideInLeft m-4">P.K.Mayakootha Iyengar Catering</h1>
