--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <!-- <link href="lib/animate/animate.min.css" rel="stylesheet">
+     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" /> -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
+    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link href="lib/animate/animate.min.css" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -39,11 +39,7 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
    <link rel="stylesheet" href="css/style2.css">
-<<<<<<< HEAD
-  
-=======
    <!--toggle button  -->
->>>>>>> 4cf93be3061215cc8f0a0a02e42dbd9812129d3a
 </head>
 
 <body>
@@ -81,36 +77,21 @@
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="menu.html" class="nav-item nav-link">Menu</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu m-0">
-                                <a href="booking.html" class="dropdown-item">Booking</a>
-                                <a href="team.html" class="dropdown-item">Our Team</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                            </div>
-                        </div>
+                  
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="book.html" class="btn btn-warning py-2 px-4">Order Now</a>
                 </div>
             </nav>
 
-<<<<<<< HEAD
-            <div class="container-xxl py-5 bg-dark hero-head mb-5">
+            <div class="container-xxl py-5 bg-dark hero-header mb-5">
                 <div class="container my-5 py-5">
                     <div class=" align-items-center g-5">
                         <div class=" text-center align-items-center text-lg-start ">
                             <div class="container gpic  text-center">
-                                <img src="img/perumalpic.png" alt="" class="img-fluid " width="300">
+                                <img src="img/perumalpic.png" alt="" class="img-fluid " width="300" style="animation: none;">
                             </div>
                             <h1 class="display-3 text-warning animated text-center slideInLeft m-4">P.K.Mayakootha Iyengar Catering</h1>
-=======
-            <div class="container-fluid py-5 bg-dark hero-header mb-5">
-                <div class="container my-5 py-5">
-                    <div class=" align-items-center g-5">
-                        <div class=" text-center align-items-center text-lg-start">
-                            <h1 class="display-3 text-warning animated fw-bold text-center slideInLeft m-4">Enjoy Our Delicious Meal</h1>
->>>>>>> 4cf93be3061215cc8f0a0a02e42dbd9812129d3a
                             <p class="text-white animated slideInLeft mb-4 pb-2 text-center" >Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem </p>
                             
                             <div class="center-a text-center m-2 p-4">
