--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                     <h1 class="text-warning m-0" >P.K.M Catering</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
-                <div class="toggle-button">
+                <!-- <div class="toggle-button">
                     <label for="toggle-en" class="text-warning label-left">Ta</label>
                     <label class="switch">
                         <input type="checkbox" id="toggle-en" checked>
                         <span class="slider round"></span>
                     </label>
                     <label for="toggle-en" class="text-warning label-right">EN</label>
-                </div>
+                </div> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
                 </button>
