--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
             </div>
         </div>
         <!-- Navbar & Hero End -->
-<div class="services container wow fadeInUp">
-    <h1 class="text-center text-dark ">Our Services</h1><br>
+<div class="services text-center container wow fadeInUp">
+    <h1 class="mb-5  section-title">Our Services</h1>
+
 
 </div>
 
@@ -185,12 +186,17 @@
                     <div class="col-lg-6 mt-0">
                         <!-- <h4 class=" text-start  text-primary fw-normal">About Us</h4> -->
                         <h1 class="mb-4">Welcome to <span class="text-primary">P.K.M Catering</span></h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos erat ipsum et lorem et sit, sed stet lorem sit.</p>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                        <p class="mb-4"><strong>Srimate Ramanujaya Namah.</strong>
+                            P.K.Mayakootha Iyengar Catering services has been operating since 1996, working in this field since 1954, "Matama Mayilai Thiru Allikeni" attracted all the Vaishnavas of Divya Desam by his hand cooking. Sri.U.V.
+                            Adiyen P.K.M. Narasimhan was the only son of P. K. Mayakutha Iyengar. This company is running in the name of my father.</p>
+                        <p class="mb-4">Although there is fierce competition in this catering service industry now , quality, tasty, healthy food at low cost, knowing the needs of guests and catering, best hospitality....
+                            These are our goals!
+                            Despite the competition, we do not compromise on the quality of food for our profit as customer satisfaction is our main goal.
+                            </p>
                         <div class="row g-4 mb-4">
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center border-start border-5 border-primary px-3">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">24</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">28</h1>
                                     <div class="ps-4">
                                         <p class="mb-0">Years In</p>
                                         <h6 class="text-uppercase mb-0">Business</h6>
