--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
             </nav>
 
 
-            <div class="container-xxl py-5 bg-dark hero-header mb-5" style="    background: linear-gradient(rgba(22, 22, 22, 0.9), rgba(0, 0, 0, 0.9)), url(/img/bg-hero.jpg);
-            ">
+            <div class="container-xxl py-5 bg-dark hero-header mb-5">
                 <div class="container my-5 py-5">
                     <div class=" align-items-center g-5">
                         <div class=" text-center align-items-center text-lg-start ">
