--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 </div>
 
         <!-- Service Start -->
-        <div class="container-xxl py-5">
+        <div class="container-fluid py-5">
             <div class="container">
                 <div class="row g-4">
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -180,7 +180,7 @@
 
 
         <!-- About Start -->
-        <div class="container-xxl py-5">
+        <div class="container-fluid py-5">
             <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
@@ -202,10 +202,7 @@
                     <div class="col-lg-6">
                         <h5 class="section-title ff-secondary text-start text-warning fw-normal">About Us</h5>
                         <h1 class="mb-4">Welcome to <i class="fa fa-utensils text-warning me-2"></i>Restoran</h1>
-<<<<<<< HEAD
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos erat ipsum et lorem et sit, sed stet lorem sit.</p>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-=======
+
                         <p class="mb-4"><strong>Srimate Ramanujaya Namah.</strong>
                             P.K.Mayakootha Iyengar Catering services has been operating since 1996, working in this field since 1954, "Matama Mayilai Thiru Allikeni" attracted all the Vaishnavas of Divya Desam by his hand cooking. Sri.U.V.
                             Adiyen P.K.M. Narasimhan was the only son of P. K. Mayakutha Iyengar. This company is running in the name of my father.</p>
@@ -215,7 +212,6 @@
                             </p>
                         <!-- <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos erat ipsum et lorem et sit, sed stet lorem sit.</p> -->
                         <!-- <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p> -->
->>>>>>> 89dd10f911ee1a22907aa560f6c10bdc66cadd57
                         <div class="row g-4 mb-4">
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center border-start border-5 border-wtext-warning px-3">
